完善顶部导航条

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的网页</title>
+    <title>巩宇的个人简历</title>
     <link rel="stylesheet" href="./a.css">
     <script src="https://at.alicdn.com/t/font_1729508_47om1atxmmu.js"></script>
     <style type="text/css">
@@ -15,21 +15,94 @@
             fill: currentColor;
             overflow: hidden;
         }
+
+        .loading {
+            width: 200px;
+            height: 200px;
+            position: relative;
+        }
+
+        .loading::after,
+        .loading::before {
+            content: '';
+            position: absolute;
+            width: 0px;
+            height: 0px;
+            background: black;
+            border-radius: 50%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            animation: s 1.5s infinite linear;
+        }
+
+        .loading::after {
+            animation-delay: 0.75s;
+        }
+
+        @keyframes s {
+            0% {
+                width: 0;
+                height: 0;
+                opacity: 1;
+            }
+
+            100% {
+                width: 100px;
+                height: 100px;
+                opacity: 0;
+            }
+        }
+
+        .site-welcome {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .site-welcome.active {
+            display: flex;
+        }
     </style>
 </head>
 
 <body>
-    <div class="topNavBar">
+    <div id="siteWelcome" class="site-welcome">
+        <div class="loading"></div>
+    </div>
+    <div id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <a href="#" alt="logo" class="logo" style="float:left">
                 <span class="rs">RS</span><span class="cd">card</span>
             </a>
-            <nav style="float: right;">
+            <nav class="menu" style="float: right;">
                 <ul style="list-style: none;">
-                    <li><a href="#">关于</a></li>
-                    <li><a href="#">技能</a></li>
-                    <li><a href="#">作品</a></li>
-                    <li><a href="#">博客</a></li>
+                    <li><a href="#siteAbout">关于</a></li>
+                    <li><a href="#siteSkills">技能</a></li>
+                    <li>
+                        <a href="#siteWorks">作品</a>
+                        <ul class="submenu">
+                            <li>作品1</li>
+                            <li>作品2</li>
+                            <li>作品3</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">博客</a>
+                        <ul class="submenu">
+                            <li>博客1</li>
+                            <li>博客2</li>
+                            <li>博客3</li>
+                        </ul>
+                    </li>
                     <li><a href="#">日历</a></li>
                 </ul>
             </nav>
@@ -41,7 +114,7 @@
     </div>
 
     <main>
-        <div class="card">
+        <div id="siteAbout" class="card">
             <div class="pictureAndText clearfix">
                 <div class="picture">
                     <img src="./img/avatar.jpg" width="270" height="347" alt="头像">
@@ -89,7 +162,7 @@
         <p class="selfIntroduction">adadasdaacasasdaas</p>
     </main>
 
-    <section class="skills">
+    <section id="siteSkills" class="skills">
         <h2>技 能</h2>
         <ol class="clearfix">
             <li>
@@ -131,7 +204,7 @@
         </ol>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="siteWorks">
         <h2>作 品 集</h2>
         <nav>
             <ol class="clearfix">
@@ -166,6 +239,38 @@
             </div>
         </div>
     </section>
+    <script>
+        setTimeout(function () {
+            siteWelcome.classList.remove('activve')
+        }, 1500)
+        window.onscroll = function (x) {
+            if (window.scrollY > 0) {
+                topNavBar.classList.add('sticky')
+            } else {
+                topNavBar.classList.remove('sticky')
+            }
+        }
+        let liTags = document.querySelectorAll('nav.menu>ul>li')
+        for (var i = 0; i < liTags.length; i++) {
+            liTags[i].onmouseenter = function (x) {
+                x.currentTarget.classList.add('active')
+            }
+            liTags[i].onmouseleave = function (x) {
+                x.currentTarget.classList.remove('active')
+            }
+        }
+        let aTags = document.querySelectorAll('nav.menu>ul>li>a')
+        for (let i = 0; i < aTags.length; i++) {
+            aTags[i].onclick = function (x) {
+                x.preventDefault()//阻止跳到锚点
+                let a = x.currentTarget
+                let href = a.getAttribute('href') //'#siteAbout'
+                let element = document.querySelector(href)
+                let top = element.offsetTop
+                window.scrollTo(0, top-70)
+            }
+        }
+    </script>
 </body>
 
 </html>
