--- a/index.html
+++ b/index.html
@@ -8,71 +8,6 @@
     <link rel="stylesheet" href="./a.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <script src="https://at.alicdn.com/t/font_1729508_47om1atxmmu.js"></script>
-    <style type="text/css">
-        .icon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
-
-        .loading {
-            width: 200px;
-            height: 200px;
-            position: relative;
-        }
-
-        .loading::after,
-        .loading::before {
-            content: '';
-            position: absolute;
-            width: 0px;
-            height: 0px;
-            background: black;
-            border-radius: 50%;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin: auto;
-            animation: s 1.5s infinite linear;
-        }
-
-        .loading::after {
-            animation-delay: 0.75s;
-        }
-
-        @keyframes s {
-            0% {
-                width: 0;
-                height: 0;
-                opacity: 1;
-            }
-
-            100% {
-                width: 100px;
-                height: 100px;
-                opacity: 0;
-            }
-        }
-
-        .site-welcome {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .site-welcome.active {
-            display: flex;
-        }
-    </style>
 </head>
 
 <body>
@@ -222,97 +157,10 @@
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script>
-        var mySwiper = new Swiper('.swiper-container', {
-            // Optional parameters
-            loop: true,
-
-            // If we need pagination
-            pagination: {
-                el: '.swiper-pagination',
-            },
-
-            // Navigation arrows
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-        })
-    </script>
-    <script>
-        //添加offset类
-        let specialTags = document.querySelectorAll('[data-x]')
-        for (let i = 0; i < specialTags.length; i++) {
-            specialTags[i].classList.add('offset')
-        }
-        findClosest()
-        window.onscroll = function (x) {
-            if (window.scrollY > 0) {
-                topNavBar.classList.add('sticky')
-            } else {
-                topNavBar.classList.remove('sticky')
-            }
-            findClosest()
-        }
-        function findClosest() {
-            let specialTags = document.querySelectorAll('[data-x]')
-            let minIndex = 0
-            for (let i = 1; i < specialTags.length; i++) {
-                if (Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
-                    minIndex = i
-                }
-            }
-            //minIndex就是离屏幕顶部最近的元素
-            specialTags[minIndex].classList.remove('offset')
-            let id = specialTags[minIndex].id
-            let a = document.querySelector('a[href="#' + id + '"]')
-            let li = a.parentNode
-            let brotherAndMe = li.parentNode.children
-            for (let i = 0; i < brotherAndMe.length; i++) {
-                brotherAndMe[i].classList.remove('highlight')
-            }
-            li.classList.add('highlight')
-        }
-        let liTags = document.querySelectorAll('nav.menu>ul>li')
-        for (var i = 0; i < liTags.length; i++) {
-            liTags[i].onmouseenter = function (x) {
-                x.currentTarget.classList.add('active')
-            }
-            liTags[i].onmouseleave = function (x) {
-                x.currentTarget.classList.remove('active')
-            }
-        }
-
-        let aTags = document.querySelectorAll('nav.menu>ul>li>a')
-        function animate(time) {
-            requestAnimationFrame(animate);
-            TWEEN.update(time);
-        }
-        requestAnimationFrame(animate);
-        for (let i = 0; i < aTags.length; i++) {
-            aTags[i].onclick = function (x) {
-                x.preventDefault()//阻止跳到锚点
-                let a = x.currentTarget
-                let href = a.getAttribute('href') //'#siteAbout'
-                let element = document.querySelector(href)
-                let top = element.offsetTop
-
-                let currentTop = window.scrollY
-                let targetTop = top - 70
-                let s = targetTop - currentTop //移动路程
-                var coords = { y: currentTop }; //起始位置
-                var t = Math.abs((s / 100) * 300) //时间
-                if (t > 500) { t = 500 }
-                var tween = new TWEEN.Tween(coords)
-                    .to({ y: targetTop }, t)
-                    .easing(TWEEN.Easing.Quadratic.InOut) //缓动类型
-                    .onUpdate(function () {
-                        window.scrollTo(0, coords.y)
-                    })
-                    .start();
-            }
-        }
-    </script>
+    <script src="./js/init-swiper.js"></script>
+    <script src="./js/autoSlideUp.js"></script>
+    <script src="./js/sticky-topbar.js"></script>
+    <script src="./js/smoothly-nav.js"></script>
 </body>
 
 </html>
