--- a/index.html
+++ b/index.html
@@ -155,12 +155,25 @@
         <div class="swiper-button-prev" style="top: 57%;"></div>
         <div class="swiper-button-next" style="top: 57%;"></div>
     </section>
+    <section class="message">
+        <h2>留言</h2>
+        <ol id="messageList"></ol>
+        <form id="postMessageForm" style="width: 700px;margin: 50px auto;">
+            <label for="">姓名</label>
+            <input type="text" name="name">
+            <label for="">内容</label>
+            <input type="text" name="content">
+            <input type="submit" value="提交">
+        </form>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/leancloud-storage@4.5.3/dist/av-min.js"></script>
     <script src="./js/init-swiper.js"></script>
     <script src="./js/autoSlideUp.js"></script>
     <script src="./js/sticky-topbar.js"></script>
     <script src="./js/smoothly-nav.js"></script>
+    <script src="./js/message.js"></script>
 </body>
 
 </html>
