--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <img src="./img/111.png" class="swiper-slide">
+                <img src="./img/111.JPG" class="swiper-slide">
                 <img src="./img/222.jpg" class="swiper-slide">
                 <img src="./img/333.jpg" class="swiper-slide">
             </div>
