--- a/index.html
+++ b/index.html
@@ -2,178 +2,182 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>巩宇的个人简历</title>
-    <link rel="stylesheet" href="./a.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <script src="https://at.alicdn.com/t/font_1729508_47om1atxmmu.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>巩宇的个人简历</title>
+  <link rel="stylesheet" href="./a.css">
+  <link rel="stylesheet" href="dist/css/swiper.min.css">
+  <script src="https://at.alicdn.com/t/font_1729508_47om1atxmmu.js"></script>
 </head>
 
 <body>
-    <div id="topNavBar" class="topNavBar">
-        <div class="topNavBar-inner clearfix">
-            <a href="#" alt="logo" class="logo" style="float:left">
-                <span class="rs">RS</span><span class="cd">card</span>
-            </a>
-            <nav class="menu" style="float: right;">
-                <ul style="list-style: none;">
-                    <li><a href="#siteAbout">关于</a></li>
-                    <li><a href="#siteSkills">技能</a></li>
-                    <li>
-                        <a href="#siteWorks">作品</a>
-                        <ul class="submenu">
-                            <li>作品1</li>
-                            <li>作品2</li>
-                            <li>作品3</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">博客</a>
-                        <ul class="submenu">
-                            <li>博客1</li>
-                            <li>博客2</li>
-                            <li>博客3</li>
-                        </ul>
-                    </li>
-                    <li><a href="#">日历</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
+<div id="topNavBar" class="topNavBar">
+  <div class="topNavBar-inner clearfix">
+    <a href="#" alt="logo" class="logo" style="float:left">
+      <span class="rs">RS</span><span class="cd">card</span>
+    </a>
+    <nav class="menu" style="float: right;">
+      <ul style="list-style: none;">
+        <li><a href="#siteAbout">关于</a></li>
+        <li><a href="#siteSkills">技能</a></li>
+        <li>
+          <a href="#siteWorks">作品</a>
+          <ul class="submenu">
+            <li>作品1</li>
+            <li>作品2</li>
+            <li>作品3</li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">博客</a>
+          <ul class="submenu">
+            <li>博客1</li>
+            <li>博客2</li>
+            <li>博客3</li>
+          </ul>
+        </li>
+        <li><a href="#">日历</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
 
-    <div class="banner">
-        <div class="mask"></div>
-    </div>
+<div class="banner">
+  <div class="mask"></div>
+</div>
 
-    <main>
-        <div data-x id="siteAbout" class="card">
-            <div class="pictureAndText clearfix">
-                <div class="picture">
-                    <img src="./img/avatar.jpg" width="270" height="347" alt="头像">
-                </div>
-                <div class="text">
+<main>
+  <div data-x id="siteAbout" class="card">
+    <div class="pictureAndText clearfix">
+      <div class="picture">
+        <img src="./img/avatar.jpg" width="270" height="347" alt="头像">
+      </div>
+      <div class="text">
                     <span class="welcome">Hello
                         <span class="triangle"></span>
                     </span>
-                    <h1>巩 宇</h1>
-                    <p>前 端 开 发 工 程 师</p>
-                    <hr>
-                    <dl>
-                        <dt>年 龄</dt>
-                        <dd>26</dd>
-                        <dt>所 在 城 市</dt>
-                        <dd>深 圳</dd>
-                        <dt>邮 箱</dt>
-                        <dd>1193976273@qq.com</dd>
-                        <dt>手 机</dt>
-                        <dd>17695780094</dd>
-                    </dl>
-                </div>
-            </div>
-            <footer class="media">
-                <a herf="#">
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-weixin"></use>
-                    </svg>
-                </a>
-                <a herf="#">
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-CN_jianshu"></use>
-                    </svg>
-                </a>
-                <a herf="#">
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-github"></use>
-                    </svg>
-                </a>
-            </footer>
-        </div>
-        <p class="download">
-            <a href="./resume.pdf" class="downloadResume" target="_blank" download="">下 载 PDF 简 历</a>
-        </p>
-        <p class="selfIntroduction">adadasdaacasasdaas</p>
-    </main>
+        <h1>巩 宇</h1>
+        <p>前 端 开 发 工 程 师</p>
+        <hr>
+        <dl>
+          <dt>年 龄</dt>
+          <dd>26</dd>
+          <dt>所 在 城 市</dt>
+          <dd>深 圳</dd>
+          <dt>邮 箱</dt>
+          <dd>1193976273@qq.com</dd>
+          <dt>手 机</dt>
+          <dd>17695780094</dd>
+        </dl>
+      </div>
+    </div>
+    <footer class="media">
+      <a href="#">
+        <svg class="icon" aria-hidden="true">
+          <use xlink:href="#icon-weixin"></use>
+        </svg>
+      </a>
+      <a href="#">
+        <svg class="icon" aria-hidden="true">
+          <use xlink:href="#icon-CN_jianshu"></use>
+        </svg>
+      </a>
+      <a href="#">
+        <svg class="icon" aria-hidden="true">
+          <use xlink:href="#icon-github"></use>
+        </svg>
+      </a>
+    </footer>
+  </div>
+  <p class="download">
+    <a href="./resume.pdf" class="downloadResume" target="_blank" download="">下 载 PDF 简 历</a>
+  </p>
+  <p class="selfIntroduction">adadasdaacasasdaas</p>
+</main>
 
-    <section data-x id="siteSkills" class="skills">
-        <h2>技 能</h2>
-        <ol class="clearfix">
-            <li>
-                <h3>HTML 5 &amp; CSS 3</h3>
-                <div class="progressBar">
-                    <div class="progress"></div>
-                </div>
-            </li>
-            <li>
-                <h3>JavaScript</h3>
-                <div class="progressBar">
-                    <div class="progress"></div>
-                </div>
-            </li>
-            <li>
-                <h3>jQuery</h3>
-                <div class="progressBar">
-                    <div class="progress"></div>
-                </div>
-            </li>
-            <li>
-                <h3>Vue</h3>
-                <div class="progressBar">
-                    <div class="progress"></div>
-                </div>
-            </li>
-            <li>
-                <h3>React</h3>
-                <div class="progressBar">
-                    <div class="progress"></div>
-                </div>
-            </li>
-            <li>
-                <h3>HTTP</h3>
-                <div class="progressBar">
-                    <div class="progress"></div>
-                </div>
-            </li>
-        </ol>
-    </section>
+<section data-x id="siteSkills" class="skills">
+  <h2>技 能</h2>
+  <ol class="clearfix">
+    <li>
+      <h3>HTML 5 &amp; CSS 3</h3>
+      <div class="progressBar">
+        <div class="progress"></div>
+      </div>
+    </li>
+    <li>
+      <h3>JavaScript</h3>
+      <div class="progressBar">
+        <div class="progress"></div>
+      </div>
+    </li>
+    <li>
+      <h3>jQuery</h3>
+      <div class="progressBar">
+        <div class="progress"></div>
+      </div>
+    </li>
+    <li>
+      <h3>Vue</h3>
+      <div class="progressBar">
+        <div class="progress"></div>
+      </div>
+    </li>
+    <li>
+      <h3>React</h3>
+      <div class="progressBar">
+        <div class="progress"></div>
+      </div>
+    </li>
+    <li>
+      <h3>HTTP</h3>
+      <div class="progressBar">
+        <div class="progress"></div>
+      </div>
+    </li>
+  </ol>
+</section>
 
-    <section data-x class="portfolio" id="siteWorks">
-        <h2>作 品 集</h2>
-        <!-- Slider main container -->
-        <div class="swiper-container">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <img src="./img/111.JPG" class="swiper-slide">
-                <img src="./img/222.jpg" class="swiper-slide">
-                <img src="./img/333.jpg" class="swiper-slide">
-            </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-        </div>
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev" style="top: 57%;"></div>
-        <div class="swiper-button-next" style="top: 57%;"></div>
-    </section>
-    <section class="message">
-        <h2>留言</h2>
-        <ol id="messageList"></ol>
-        <form id="postMessageForm" style="width: 700px;margin: 50px auto;">
-            <label for="">姓名</label>
-            <input type="text" name="name">
-            <label for="">内容</label>
-            <input type="text" name="content">
-            <input type="submit" value="提交">
-        </form>
-    </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/leancloud-storage@4.5.3/dist/av-min.js"></script>
-    <script src="./js/init-swiper.js"></script>
-    <script src="./js/autoSlideUp.js"></script>
-    <script src="./js/sticky-topbar.js"></script>
-    <script src="./js/smoothly-nav.js"></script>
-    <script src="./js/message.js"></script>
+<section data-x class="portfolio" id="siteWorks">
+  <h2>作 品 集</h2>
+  <!-- Slider main container -->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">Slide 1</div>
+      <div class="swiper-slide">Slide 2</div>
+      <div class="swiper-slide">Slide 3</div>
+    </div>
+    <!-- 如果需要分页器 -->
+    <div class="swiper-pagination"></div>
+    <!-- 如果需要滚动条 -->
+    <div class="swiper-scrollbar"></div>
+  </div>
+  <!-- 如果需要导航按钮 -->
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+</section>
+<section class="message">
+  <h2>留言</h2>
+  <ol id="messageList"></ol>
+  <form id="postMessageForm" style="width: 700px;margin: 50px auto;">
+    <label for="">姓名</label>
+    <label>
+      <input type="text" name="name">
+    </label>
+    <label for="">内容</label>
+    <label>
+      <input type="text" name="content">
+    </label>
+    <input type="submit" value="提交">
+  </form>
+</section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/leancloud-storage@4.5.3/dist/av-min.js"></script>
+<script src="./js/init-swiper.js"></script>
+<script src="dist/js/swiper.min.js"></script>
+<script src="./js/autoSlideUp.js"></script>
+<script src="./js/sticky-topbar.js"></script>
+<script src="./js/smoothly-nav.js"></script>
+<script src="./js/message.js"></script>
 </body>
 
 </html>
